@@ -1,3 +1,9 @@
+1999-12-05  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
+
+	* poe-18.el (byte-code-function-p): Docstring sync.
+	(cyclic-function-indirection): New error symbol.
+	(indirect-function): New function; use above symbol.
+
 1999-11-30  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
 
 	* poe-18.el (current-time-string): New local variable `lyear'
